various fixes, mostly getting images on mobile to be full width

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -2,12 +2,14 @@
 $breakpoint-tablet: 900px;
 $breakpoint-mobile: 600px;
 
+$padding-mobile: 1.5rem;
+
 $color-dark: #010100;
 $color-orange: #fe9400;
 $color-light: #fdfbf9;
 
 $font-header: 'area-extended', sans-serif;
 $font-body: 'area', sans-serif;
-$line-height-list: 1.1;
+$line-height-list: 1.35;
 
 $site-width: 1000px;
